--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "homepage": "./",
   "dependencies": {
+    "antd": "^3.14.1",
     "bootstrap": "^4.3.1",
     "react": "^16.8.3",
     "react-bootstrap": "^1.0.0-beta.5",
